k8s/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task
  name: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-pod
  template:
    metadata:
      labels:
        app: task-pod
    spec:
      containers:
      - name: task
        resources: {}
        image: docker.io/cmwylie19/task-service-dev:latest
        ports:
        - containerPort: 8080
      restartPolicy: Always
