k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-db
  name: mongodb-service
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb-pod
  type: ClusterIP
