k8s/task-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task
  name: task-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: task-pod
  type: ClusterIP
