k8s/task.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task
  name: task
  namespace: default
spec:
  ports:
    - port: 8080
  selector:
    app: task
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task
  name: task
  namespace: default
spec:
  selector:
    matchLabels:
      app: task
  replicas: 1
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
        - image: docker.io/cmwylie19/task-service-dev:latest
          name: task
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
