k8s/gateway-gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: "::"
  bindPort: 8080
  httpGateway:
    options:
      healthCheck:
        path: /check/healthz
      httpConnectionManagerSettings:
        useRemoteAddress: true
  options:
    accessLoggingService:
      accessLog:
        - fileSink:
            path: /dev/stdout
            jsonFormat:
              protocol: "%PROTOCOL%"
              duration: "%DURATION%"
              upstreamCluster: "%UPSTREAM_CLUSTER%"
              upstreamHost: "%UPSTREAM_HOST%"
              xForwardFor: "%REQ(X-FORWARDED-FOR)%"
              responseCode: "%RESPONSE_CODE%"
              method: "%REQ(:METHOD)%"
              path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
              systemTime: '%START_TIME%'
              remoteAddress: "%DOWNSTREAM_REMOTE_ADDRESS%"
              pod_name: '%DYNAMIC_METADATA(io.solo.transformation:pod_name)%'
            # The 'error' dynamic metadata entry that is set by the Gloo Edge transformation filter
              endpoint_url: '%DYNAMIC_METADATA(io.solo.transformation:endpoint_url)%'
  proxyNames:
    - gateway-proxy
  useProxyProto: false
