k8s/health-check-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: health-check-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - "health"
    routes:
      - matchers:
          - prefix: /healthz
        directResponseAction:
          status: 200
          body: "alive!"
