k8s/test-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: agencies-api
  namespace: gloo-system
spec:
  displayName: agencies
  virtualHost:
    domains:
      - '*'
    routes:
      - name: tasks
        matchers:
          - methods:
              - GET
              - OPTIONS
              - POST
              - PUT
            prefix: "/"
        routeAction:
          single:
            upstream:
              name: default-httpbin-8000 
              namespace: gloo-system
        options:
          ratelimitBasic:
            anonymous_limits:
              requests_per_unit: 3
              unit: MINUTE
            authorized_limits:
              requests_per_unit: 12
              unit: MINUTE
