k8s/vs-httpbin.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: demo
  namespace: gloo-system
spec:
  # sslConfig:
  #   secretRef:
  #     name: upstream-tls
  #     namespace: gloo-system
  virtualHost:
    options:
      extauth:
        configRef:
          name: google-oidc
          namespace: gloo-system
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
            single:
              upstream:
                name: default-httpbin-8000
                namespace: gloo-system
      - matchers:
          - prefix: /callback
        routeAction:
            single:
              upstream:
                name: default-httpbin-8000
                namespace: gloo-system
